infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: bigstore.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     kubernetes.io/ingress.class: 'nginx'
#     nginx.ingress.kubernetes.io/use-regex: true
# spec:
#   rules:
#     - host: bigstore.dev
#       http:
#         paths:
#           - path: /api/users/?(.*)
#             pathType: Prefix
#             backend:
#               serviceName: auth-srv
#               servicePort: 3000
